--- a/wp-content/themes/sine-charity/style.css
+++ b/wp-content/themes/sine-charity/style.css
@@ -25,7 +25,7 @@
     top: 0px;
     bottom: 0px;
     width: 77%;
-    background-color: #f3501d;
+    background-color: #fcad04;
 }
 
 .sine-bottom-header-wrapper.header-3 .site-branding > * {
@@ -62,7 +62,7 @@
 
 .sine-contact-info-inner-wrapper > i {
     font-size: 32px;
-    color: #f3501d;
+    color: #1df352;
     margin-left: 25px;
     border-right: 1px dashed #000;
     padding-right: 15px;
