--- a/wp-content/themes/sine-charity/style.css
+++ b/wp-content/themes/sine-charity/style.css
@@ -179,3 +179,99 @@
     transform: rotate(
 -90deg);
 }
+
+table{
+    width: 100%;
+    border-collapse:separate;
+    border-spacing: 0;
+}
+
+table th:first-child{
+    border-radius: 5px 0 0 0;
+}
+
+table th:last-child{
+    border-radius: 0 5px 0 0;
+    border-right: 1px solid #F44F1C;
+}
+
+table th{
+    text-align: center;
+    color:white;
+    background: #F44F1C;
+    border-left: 1px solid #F44F1C;
+    border-top: 1px solid #F44F1C;
+    border-bottom: 1px solid #F44F1C;
+    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+    width: 25%;
+    padding: 10px 0;
+}
+
+table td{
+    text-align: center;
+    border-left: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
+    border-top:none;
+    box-shadow: 0px -3px 5px 1px #eee inset;
+    width: 25%;
+    padding: 10px 0;
+}
+
+table td:last-child{
+    border-right: 1px solid #a8b7c5;
+}
+
+table tr:last-child td:first-child {
+    border-radius: 0 0 0 5px;
+}
+
+table tr:last-child td:last-child {
+    border-radius: 0 0 5px 0;
+}
+
+.send_btn_event_offer {
+    display: inline-block;
+    padding: 15px;
+    background: #33aaff;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.send_btn_event_cancel {
+    display: inline-block;
+    padding: 15px;
+    background: #ff1133;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.send_btn_event_cancel {
+    display: inline-block;
+    padding: 15px;
+    background: #ff1133;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+.wpcf7 input[type='submit'], .send_btn {
+    max-width: 100%;
+    display: inline-block;
+    margin-top: 2rem;
+    padding: 15px 20px;
+    background: #ff9999;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.9rem;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
